@startuml
title <size: 30> EnergyConsumptionSensor v6.1\n<size: 25>Development view level 5 - class diagram

skinparam linetype ortho

interface Sensor {

}

interface AggregateRoot{
    + getID() : DomainID
}

interface DomainID{
    + getID() : String
}

interface ValueObject<T> {
    + getValue() : T
}

interface Sensor {
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getSensorName() : SensorNameVO
}

class EnergyConsumptionSensor{
    - sensorName : SensorNameVO
    - deviceID : DeviceIDVO
    - sensorTypeID : SensorTypeIDVO
    - sensorID : SensorIDVO



    + EnergyConsumptionSensor(sensorName : SensorNameVO, deviceID : DeviceIDVO, sensorTypeID : SensorTypeIDVO)
    + getID() : SensorIDVO
    + getSensorName() : SensorNameVO
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getReading(initialDate : String, finalDate : String, simHardware : SimHardware) : ValueObject<Integer>
}

class EnergyConsumptionValue{
    - primitiveValue : int

    + EnergyConsumptionValue(reading: String)
    + getValue() : Integer
}

class SimHardware{
    + getValue(): String
    + getValue(initialDate : String, finalDate : String) : String
}

class SensorNameVO{
    - sensorName : String
    + SensorNameVO(sensorName : String)
    + getValue() : String
}

interface SensorExternalServices{
     + getValue() : String
}

class SensorIDVO{
    - identifier : UUID
    + SensorIDVO(identifier : UUID)
    + getID() : String
}


class SensorTypeIDVO{
    - sensorTypeID : String
    + SensorTypeIDVO(sensorTypeID : String)
    + getID() : String
}

class DeviceIDVO{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
    + getID() : String
}


Sensor <|..  EnergyConsumptionSensor
SimHardware <.. EnergyConsumptionSensor : <<uses>>

SensorNameVO --o EnergyConsumptionSensor : <<has>>
SensorIDVO --o EnergyConsumptionSensor
SensorExternalServices <|..down SimHardware
EnergyConsumptionValue <..right EnergyConsumptionSensor : <<creates>>
SensorTypeIDVO --o EnergyConsumptionSensor : <<has>>
DeviceIDVO --o EnergyConsumptionSensor : <<has>>

ValueObject <|.. SensorNameVO
DomainID  <|.. SensorIDVO
DomainID  <|.. SensorTypeIDVO
DomainID  <|.. DeviceIDVO

ValueObject <|.. EnergyConsumptionValue
Sensor --|>AggregateRoot

@enduml